// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero component matches the snapshot 1`] = `
<div
  className="py-12 px-6 md:py-24 md:px-12 transition-all bg-white dark:bg-slate-900 text-base sm:text-lg lg:flex lg:items-center lg:min-h-[calc(100vh-5rem)]"
>
  <div
    className="max-w-site-sm md:max-w-site-md lg:max-w-site-lg mx-auto"
  >
    <div
      className="max-w-prose"
    >
      <div
        className="mb-6 md:mb-8 relative z-10 inline-block"
      >
        <h1
          className="transition-all font-heading font-black text-4xl md:text-5xl lg:text-6xl text-slate-900 dark:text-white mb-0"
        >
          Test Title
        </h1>
        <div
          className="shine opacity-50 dark:opacity-40"
        />
      </div>
      <p>
        This is a test Hero component.
      </p>
    </div>
  </div>
</div>
`;

exports[`Hero component matches the snapshot when short 1`] = `
<div
  className="py-12 px-6 md:py-24 md:px-12 transition-all bg-white dark:bg-slate-900 text-base sm:text-lg lg:flex lg:items-center"
>
  <div
    className="max-w-site-sm md:max-w-site-md lg:max-w-site-lg mx-auto"
  >
    <div
      className="max-w-prose"
    >
      <div
        className="mb-6 md:mb-8 relative z-10 inline-block"
      >
        <h1
          className="transition-all font-heading font-black text-4xl md:text-5xl lg:text-6xl text-slate-900 dark:text-white mb-0"
        >
          Test Title
        </h1>
        <div
          className="shine opacity-50 dark:opacity-40"
        />
      </div>
      <p>
        This is a test Hero component.
      </p>
    </div>
  </div>
</div>
`;
